--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,13 @@
-va
-##############################
-.mtj.tmp/
-*.class
-*.jar
-*.war
-*.ear
-*.nar
-hs_err_pid*
-replay_pid*
+# Ignore Gradle project-specific cache directory
+.gradle
 
-##############################
-## Gradle
-##############################
-bin/
-build/
-*.gradle
-*.gradletasknamecache
-gradle-app.setting
-!gradle-wrapper.jar
+# # Ignore Gradle build output directory
+build
 
-##############################
-## IntelliJ
-##############################
-out/
+ **/logs/
+
+.settings
+bin
+.project*
+.classpath
 .idea/
-.idea_modules/
-*.iml
-*.ipr
-*.iws
-
