--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'distribution'
+    id 'checkstyle'
 }
 
 group 'hexlet.code'
@@ -13,6 +14,10 @@ repositories {
 
 compileJava {
     options.release = 17
+}
+
+run {
+    standardInput = System.in
 }
 
 application {
