--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
 # Ignore Gradle project-specific cache directory
-.gradle
+/.gradle/
 
 # # Ignore Gradle build output directory
-build
+/build/
+/.idea/
 
- **/logs/
-
-.settings
-bin
-.project*
-.classpath
-.idea/
+ 
